--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,22 @@
     <title>ContactList</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    
+    <%= render 'layouts/header' %>
     <div class="container">
-      <%= render 'layouts/header' %>
+
+      <% flash.each do |message_type, message| %>
+        <%= content_tag 'div', class: "alert alert-#{message_type} alert_dismissible", role: 'alert' do %>
+          <button type='button' class='close' data-dismiss='alert' aria-label='Close'>
+          <span aria-hidden='true'>&times;</span>
+          </button>
+          <%= message %>
+        <% end %>
+      <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
