--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,6 +2,6 @@
   <h1>Contact List</h1>
   <p>Gerencie seus Contatos em qualquer lugar!</p>
   <p>
-    <%= link_to 'Crie sua conta', '#', class: 'btn btn-primary btn-lg' %>
+    <%= link_to 'Crie sua conta', new_user_path, class: 'btn btn-primary btn-lg' %>
   </p>
 </div>
